# Sawit-Finance

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Odra.toml  README.md  SECURITY.md  build-wasm.sh  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: agents.yml  ci.yml  codeql.yml
agents/: .allocation_state.json  .env.example  .market_state.json  .oracle_provenance.json  .yield_state.json  allocation_agent.py  cpo_price.py  demo_agent.py  market_analyst_agent.py  mcp_server.py  mcp_test.py  oracle_agent.py  requirements.txt  x402.py  x402_facilitator.py  x402_settle.py  yield_router.py
agents/x402-official/: .env.example  README.md  agent.ts  env.ts  facilitator.ts  package.json  paid-fetch.ts  server.ts
contracts/production-vault/: Cargo.toml
contracts/production-vault/src/: lib.rs  production_vault.rs
contracts/sawit-token/: Cargo.toml
contracts/sawit-token/src/: lib.rs  sawit_token.rs
contracts/token-minter/: Cargo.toml
contracts/token-minter/src/: lib.rs  token_minter.rs
contracts/yield-distributor/: Cargo.toml
contracts/yield-distributor/src/: lib.rs  yield_distributor.rs
deploy/: Cargo.toml
deploy/src/: allocate.rs  claim.rs  demo.rs  deploy.rs  fund.rs  grant.rs  inspect_epoch.rs  kyc.rs  mint.rs  read_balance.rs  read_state.rs  record.rs  resize_epoch.rs  set_claimable.rs  set_gorr.rs  set_window.rs  sweep.rs  topup.rs  upgrade_dist.rs  upgrade_vault.rs
docs/: agents-automation.md  mcp-evidence.md
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: full_flow.rs
frontend/: .env.local.example  .gitignore  README.md  brand.md  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: ClickProviders.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/activity/: route.ts
frontend/src/app/api/agents/: route.ts
frontend/src/app/api/balance/: route.ts
frontend/src/app/api/cpo-history/: route.ts
frontend/src/app/api/demo-kyc/: route.ts
frontend/src/app/api/state/: route.ts
frontend/src/app/app/agents/: page.tsx
frontend/src/components/app/: AgentsView.tsx  AppShell.tsx  ClaimView.tsx  ExploreView.tsx  InvestorDashboard.tsx  KycView.tsx  PortfolioView.tsx  investor.tsx  shared.tsx
frontend/src/components/motion/: Reveal.tsx  SmoothScroll.tsx
frontend/src/components/site/: AccessSection.tsx  BeliefSection.tsx  BridgeSection.tsx  FaqSection.tsx  HeroMorph.tsx  HowItWorks.tsx  LangToggle.tsx  OnChainProof.tsx  RequestAccess.tsx  RwaSection.tsx  SiteFooter.tsx  SiteNav.tsx  StandardSection.tsx  TechSection.tsx
frontend/src/components/ui/: Button.tsx  ChartArea.tsx  DonutChart.tsx  LineTrend.tsx
frontend/src/lib/: StyledRegistry.tsx  activity.ts  agentsTypes.ts  buy.ts  casperState.ts  claim.ts  config.ts  dictionaries.ts  errors.ts  format.ts  i18n.tsx  onchain.ts  stateSnapshot.ts  useAccount.ts  useAgents.ts  useChainState.ts  useCpoHistory.ts  useCsprUsd.ts  useFairValue.ts  useFx.ts  useSawitBalance.ts
wasm/: SawitMinter.wasm  SawitProductionVault.wasm  SawitToken.wasm  SawitYieldDistributor.wasm
