[workspace]
members = [
    "contracts/production-vault",
    "contracts/sawit-token",
    "contracts/token-minter",
    "contracts/yield-distributor",
    "e2e",
    "deploy",
]
resolver = "2"

[workspace.dependencies]
odra = { version = "2.8.2", default-features = false }
odra-test = { version = "2.8.2" }
odra-build = { version = "2.8.2" }
odra-cli = { version = "2.8.2", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
