[package]
name = "sawit-deploy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[[bin]]
name = "record"
path = "src/record.rs"

[[bin]]
name = "read_state"
path = "src/read_state.rs"

[[bin]]
name = "mint"
path = "src/mint.rs"

[[bin]]
name = "fund"
path = "src/fund.rs"

[[bin]]
name = "claim"
path = "src/claim.rs"

[[bin]]
name = "grant"
path = "src/grant.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "read_balance"
path = "src/read_balance.rs"

[[bin]]
name = "set_gorr"
path = "src/set_gorr.rs"

[[bin]]
name = "set_claimable"
path = "src/set_claimable.rs"

[[bin]]
name = "allocate"
path = "src/allocate.rs"

[[bin]]
name = "kyc"
path = "src/kyc.rs"

[features]
livenet = ["dep:odra-casper-livenet-env"]

[dependencies]
odra = { workspace = true }
production-vault = { path = "../contracts/production-vault" }
sawit-token = { path = "../contracts/sawit-token" }
token-minter = { path = "../contracts/token-minter" }
yield-distributor = { path = "../contracts/yield-distributor" }
odra-casper-livenet-env = { version = "2.8.2", optional = true }

[[bin]]
name = "sweep"
path = "src/sweep.rs"

[[bin]]
name = "topup"
path = "src/topup.rs"

[[bin]]
name = "upgrade_dist"
path = "src/upgrade_dist.rs"

[[bin]]
name = "inspect_epoch"
path = "src/inspect_epoch.rs"

[[bin]]
name = "set_window"
path = "src/set_window.rs"

[[bin]]
name = "resize_epoch"
path = "src/resize_epoch.rs"

[[bin]]
name = "upgrade_vault"
path = "src/upgrade_vault.rs"
