[package]
name = "sawit-e2e"
version = "0.1.0"
edition = "2021"

# Integration tests only — this crate ships no contract code.
[lib]
path = "src/lib.rs"

[dev-dependencies]
odra = { workspace = true }
odra-test = { workspace = true }
production-vault = { path = "../contracts/production-vault" }
sawit-token = { path = "../contracts/sawit-token" }
token-minter = { path = "../contracts/token-minter" }
yield-distributor = { path = "../contracts/yield-distributor" }
